--- a/PreEntrega2+Camusso/index.html
+++ b/PreEntrega2+Camusso/index.html
@@ -13,9 +13,6 @@
 
         <img id="logo" src="img/LOGO-PROYECTO1.png" alt="LOGO-PROYECTO1">
 
-
-
-
         <nav>
             <ul class="menu">
                 <li> <a href="index.html">INICIO</a></li>
@@ -28,9 +25,16 @@
 
     </header>
 
-    <main class="video">
 
-        <img src="img/video1.jpg" alt="video1">
+    <main class="main">
+        <div class="parrafo-inicio">
+            <h1 class="titulo-inicio">Alquiler de aparatologia estetica en Cordoba</h1>
+
+            <p class="texto-inicio">  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto accusamus ad at iusto animi eum molestiae voluptate facilis nesciunt doloribus illum minus velit consequuntur illo atque vero, incidunt laudantium placeat!</p>
+
+        </div>
+        
+        <img class="imagen-inicio" src="img/video1.jpg" alt="video1">
 
 
     </main>
