--- a/PreEntrega2+Camusso/index.html
+++ b/PreEntrega2+Camusso/index.html
@@ -40,8 +40,9 @@
     </main>
 
     <footer class="footer-inicio">
-        <img src="img/google-maps.png" alt="google-maps">
-        <a href="http://">INSTAGRAM</a>
+       <a href="#"><img id="googlemaps" src="img/google-maps.png" alt=""></a>
+       <a href="#"><img id="instagram" src="img/instagram.jpg" alt=""></a>
+       <a href="#"><img id="whatsApp" src="img/whatsapp.png" alt=""></a>
     </footer>
 
 
