--- a/PreEntrega2+Camusso/pages/quienessomos.html
+++ b/PreEntrega2+Camusso/pages/quienessomos.html
@@ -40,12 +40,12 @@
         </section>
     </main>
 
-    <footer>
-        <nav>
-            <a href="">INSTAGRAM</a>
-            <a href="">WHATSAPP</a>
-        </nav>
-    </footer>
+    <footer class="footer-inicio">
+        <a href="#"><img id="googlemaps" src="img/google-maps.png" alt=""></a>
+        <a href="#"><img id="instagram" src="img/instagram.jpg" alt=""></a>
+        <a href="#"><img id="whatsApp" src="img/whatsapp.png" alt=""></a>
+     </footer>
+ 
 </body>
 
 </html>
