--- a/PreEntrega2+Camusso/pages/contactate.html
+++ b/PreEntrega2+Camusso/pages/contactate.html
@@ -33,12 +33,12 @@
 
         </div>
     </main>
-    <footer>
-        <Nav>
-            <a href="">INSTAGRAM</a>
-            <a href="">WHATSAPP</a>
-        </Nav>
-    </footer>
+    <footer class="footer-inicio">
+        <a href="#"><img id="googlemaps" src="../img/google-maps.png" alt=""></a>
+        <a href="#"><img id="instagram" src="../img/instagram.jpg" alt=""></a>
+        <a href="#"><img id="whatsApp" src="../img/whatsapp.png" alt=""></a>
+     </footer>
+ 
 </body>
 
 </html>
