--- a/PreEntrega2+Camusso/pages/porqueelegirnos.html
+++ b/PreEntrega2+Camusso/pages/porqueelegirnos.html
@@ -54,9 +54,9 @@
     </main>
 
     <footer class="footer-inicio">
-        <a href="#"><img id="googlemaps" src="img/google-maps.png" alt=""></a>
-        <a href="#"><img id="instagram" src="img/instagram.jpg" alt=""></a>
-        <a href="#"><img id="whatsApp" src="img/whatsapp.png" alt=""></a>
+        <a href="#"><img id="googlemaps" src="../img/google-maps.png" alt=""></a>
+        <a href="#"><img id="instagram" src="../img/instagram.jpg" alt=""></a>
+        <a href="#"><img id="whatsApp" src="../img/whatsapp.png" alt=""></a>
      </footer>
  
 
