--- a/PreEntrega2+Camusso/pages/quienessomos.html
+++ b/PreEntrega2+Camusso/pages/quienessomos.html
@@ -39,11 +39,11 @@
             <img src="../img/publicidad-imagen-empresarial.jpg" alt="">
         </section>
     </main>
-
+    
     <footer class="footer-inicio">
-        <a href="#"><img id="googlemaps" src="img/google-maps.png" alt=""></a>
-        <a href="#"><img id="instagram" src="img/instagram.jpg" alt=""></a>
-        <a href="#"><img id="whatsApp" src="img/whatsapp.png" alt=""></a>
+        <a href="#"><img id="googlemaps" src="../img/google-maps.png" alt=""></a>
+        <a href="#"><img id="instagram" src="../img/instagram.jpg" alt=""></a>
+        <a href="#"><img id="whatsApp" src="../img/whatsapp.png" alt=""></a>
      </footer>
  
 </body>
