--- a/PreEntrega2+Camusso/pages/equipos.html
+++ b/PreEntrega2+Camusso/pages/equipos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="../css/styles.css">
 
 </head>
@@ -30,35 +33,52 @@
     <h1>ALQUILA CON NOSOTROS</h1>
     <main>
         <section>
-            <img src="../img/criolipolisis.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, odio! Provident sequi quasi magni laborum
-                illum quidem maiores eum, hic necessitatibus nihil iure numquam earum doloremque eius quo sit cumque.
-            </p>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/criolipolisis.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">CRIOLIPOLISIS</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
         </section>
 
         <section>
-            <img src="../img/hifu.jpg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio mollitia dolorem expedita amet commodi
-                ipsum porro quibusdam nobis ut minus modi voluptatibus, minima quas magnam beatae error qui in aliquid?
-            </p>
-
+            <div class="card" style="width: 18rem;">
+                <img src="../img/hifu.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HIFU</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
         </section>
 
         <section>
-            <img src="../img/velabody.jpg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt deserunt molestiae ducimus consectetur
-                provident ipsam quia minima laborum animi, amet cupiditate maxime eligendi consequatur magnam numquam
-                blanditiis non repellat explicabo?</p>
-
+            <div class="card" style="width: 18rem;">
+                <img src="../img/velabody.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">VELABODY</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
         </section>
+
     </main>
 
     <footer class="footer-inicio">
         <a href="#"><img id="googlemaps" src="../img/google-maps.png" alt=""></a>
         <a href="#"><img id="instagram" src="../img/instagram.jpg" alt=""></a>
         <a href="#"><img id="whatsApp" src="../img/whatsapp.png" alt=""></a>
-     </footer>
- 
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
