--- a/PreEntrega2+Camusso/pages/equipos.html
+++ b/PreEntrega2+Camusso/pages/equipos.html
@@ -31,7 +31,7 @@
     </header>
 
     <h1>ALQUILA CON NOSOTROS</h1>
-    <main>
+    <main class="equipos">
         <section>
             <div class="card" style="width: 18rem;">
                 <img src="../img/criolipolisis.jpg" class="card-img-top" alt="...">
